# hsc3-graphs

./: .boring  .gitignore  .gitlab-ci.yml  Makefile  README  README.md  cabal.project  hsc3-graphs.cabal  polyglot-wasm.html  polyglot.html
cmd/: Makefile  browse.scd  graphs-db.hs  graphs.hs  mk.hs
css/: emacs.css  polyglot.css
db/: 000197764d0eeca9.scsyndef  000197764d0eeca9.sl  000e6dd3b41e00eb.scsyndef  000e6dd3b41e00eb.sl  000f3fd092346e84.scm  000f3fd092346e84.scsyndef  00104533f8dc509c.hs  00104533f8dc509c.scsyndef  0013a1a6925b5ad2.scsyndef  00150a0c58398e2b.scsyndef  00150a0c58398e2b.sl  0016fb18af6da259.scsyndef  0016fb18af6da259.sl  001957f1bc88a238.lisp  001957f1bc88a238.scsyndef  0019e94af9890aac.scsyndef  001d85eda511f30f.scsyndef  001d85eda511f30f.sl  001fc0f389c152b5.scsyndef  001fc0f389c152b5.sl  0021693edf12ae7d.scsyndef  0021693edf12ae7d.stc  002e5433881d686b.scsyndef  003888e6b8731c4b.scsyndef  003d24b6c9dd1c14.hs  003d24b6c9dd1c14.scsyndef  0041b6d5e8bf8e4e.scm  0041b6d5e8bf8e4e.scsyndef  0041e2e0a3958fd7.scsyndef  0041e2e0a3958fd7.stc  0045a46b6735078e.scd  0045a46b6735078e.scsyndef  004728c28fa3fa74.scsyndef  004728c28fa3fa74.sl  004924a93386341e.scd  004924a93386341e.scsyndef  004d274e7c29015c.scm  004d274e7c29015c.scsyndef  004d3f840e9d651d.scsyndef  004d3f840e9d651d.sl  (+38507 more)
dot/: 1-1Ni.dot  1-4Q6.dot  1-4QN.dot  1-4Qx.dot  1-4Tw.dot  1-Td.dot  Makefile  aleatoric-quartet-m.dot  aleatoric-quartet.dot  alien-meadow.dot  analog-bubbles.dot  analog-bubbles.sc.dot  analogue-daze.dot  arpeggio.dot  babbling-brook.dot  berlin-1977.sc.dot  birds.dot  bit-reduction.dot  bitwise.dot  bohlen-pierce-140.dot  bottle.dot  ccomb.dot  comb-delay-sweeps.dot  cricket.dot  cut-outs.dot  dark-sea-horns.dot  deep-sea.dot  deep-trip.dot  demanding-studies.dot  dial-history.dot  diffraction.dot  discretion-m.dot  discretion.dot  f-lets.dot  f0-tw0051.dot  f0-tw0077.dot  f0-tw0084.dot  fm-iter.dot  fm-kltr.dot  forest-sounds.dot  (+74 more)
fs/: Forth2HTML.fs
gr/: 1-1Ni.hs  1-4Q6.hs  1-4Q6.scd  1-4QM.hs  1-4QM.scd  1-4QN.hs  1-4QN.scd  1-4Qx.hs  1-4Qx.scd  1-4Tw.hs  1-4Tw.scd  1-4VL.hs  1-9.hs  1-S.hs  1-S.scd  1-Td.hs  1-Td.scd  F0.hs  Makefile  Makefile.graphs  acid-otophilia.hs  adc-16-6-2.hs  adc-16-6-2.scd  after-goeyvaerts.hs  aleatoric-quartet-m.hs  aleatoric-quartet.fs  aleatoric-quartet.hs  aleatoric-quartet.scd  alien-froggies-rec.hs  alien-froggies.fs  alien-froggies.hs  alien-froggies.scd  alien-meadow.fs  alien-meadow.hs  alien-meadow.scd  ambient1.hs  an-1-1Ni.scd  analog-bubbles-mouse.fs  analog-bubbles-mouse.hs  analog-bubbles-mouse.scd  (+541 more)
hs/: L.hs  ix.hs  jmcc.hs  mk-ix.hs  mk-lib.hs
html/: README
js/: polyglot.js
json/: db.json
lib/: hsc3-graphs-lib.cabal
md/: credits.md  graphs.md  notes.md  polyglot-browser.md
obs/: README
scsyndef/: Makefile  analog-bubbles.hs.scsyndef  analog-bubbles.sc.scsyndef  analog-bubbles.scsyndef  analog_bubbles.scsyndef  analogue-daze.scsyndef  berlin-1977.hs.scsyndef  berlin-1977.sc.scsyndef  scratchy.scsyndef  sidereal-time.scsyndef  sprinkler.scsyndef  synthetic-piano.scsyndef  tank.scsyndef  why-supercollider-m.hs.scsyndef  why-supercollider-rand.sc.scsyndef  why-supercollider.hs.scsyndef  why-supercollider.sc.scsyndef  why-supercollider.scsyndef  why_supercollider.scsyndef  zizle.scsyndef
sh/: mk-html.sh  mk-packages.sh  mk-pdf.sh  mk-svg.sh  print-fs.sh  statistics.sh
snd/: 2006-10-05.snd
src/: 1-1Ni.hs  1-4Q6.hs  1-4QM.hs  1-4QN.scd  1-4Qx.hs  1-Td.hs  Makefile  Makefile.graphs  Mice.hs  acid-otophilia.hs  adso.hs  adso.lhs  after-goeyvaerts.hs  aleatoric-quartet-m.hs  aleatoric-quartet.lhs  aleatoric-quartet.scd  alien-froggies.hs  alien-meadow.hs  ambient1.hs  analog-bubbles.hs  (+329 more)
(+1399 files in other folders)
