Name:              hsc3-graphs
Version:           0.19
Synopsis:          Haskell SuperCollider Graphs
Description:       illustrative unit generator graphs for hsc3.
License:           GPL
Category:          Sound
Copyright:         (c) Rohan Drape and others, 2006-2021
Author:            Rohan Drape
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hsc3-graphs
Tested-With:       GHC == 8.8.4
Build-Type:        Simple
Cabal-Version:     >= 1.8

Data-Files:        README
                   Makefile

Library
  Build-Depends:   base >= 4.7 && < 5,
                   hmt == 0.19.*,
                   hosc == 0.19.*,
                   hsc3 == 0.19.*,
                   hsc3-lang == 0.19.*,
                   hsc3-m == 0.19.*,
                   hsc3-rw == 0.19.*,
                   hsc3-unsafe == 0.19.*,
                   sc3-rdu == 0.19.*,
                   MonadRandom,
                   random
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Sound.SC3.Graphs.Treatments

Source-Repository  head
  Type:            git
  Location:        https://gitlab.com/rd--/hsc3-graphs
