cabal-version:     2.4
name:              hsc3-graphs
version:           0.20
synopsis:          Haskell SuperCollider Graphs
license:           GPL-3.0-only
category:          Sound
copyright:         (c) Rohan Drape, 2006-2021
maintainer:        rd@rohandrape.net
stability:         Experimental
homepage:          http://rohandrape.net/t/hsc3-graphs
tested-with:       GHC == 8.8.4
build-type:        Simple

library
  build-depends:        base >= 4.7 && < 5,
                        directory,
                        filepath,
                        hmt-base == 0.20.*,
                        hosc == 0.20.*,
                        hsc3 == 0.20.*,
                        hsc3-dot == 0.20.*,
                        hsc3-lisp == 0.20.*,
                        murmur-hash,
                        process,
                        split,
                        stsc3 == 0.20.*
  default-language:     Haskell2010
  ghc-options:          -Wall -fwarn-tabs
  exposed-modules:      Sound.SC3.Graphs.Polyglot

executable hsc3-graphs
  build-depends:        base >= 4.7 && < 5,
                        hsc3-graphs,
                        hsc3-lisp == 0.20.*
  hs-source-dirs:       cmd
  main-is:              graphs.hs
  default-language:     Haskell2010
  ghc-options:          -Wall -fwarn-tabs

source-repository  head
  type:            git
  location:        https://gitlab.com/rd--/hsc3-graphs
